test/scc_test/decl/semantic-errors/012.t
void test(struct A a)
{
}